# database

./: .gitignore  LICENSE  Makefile  config.py  main.py  pyproject.toml  requirements.txt  server.py
data/: load_data.py
processor/: config.py  convert_data.py  handle_data.py  load_data.py  preprocess_data.py
src/: load_data.py
