[tool.poetry]
name = "database"
version = "0.1.0"
description = ""
authors = ["reudekx"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
xarray = "^2024.5.0"
geopandas = "^0.14.4"
regionmask = "^0.12.1"
netcdf4 = "^1.6.5"
flask = "^3.0.3"
cftime = "^1.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
